[tool.poetry]
name = "blog"
version = "0.1.0"
description = "This is my Falcon's marketing site"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.0.2"
python-dotenv = "^0.21.0"
sentry-sdk = "^1.11.1"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ruff = "^0.0.278"
black = "^23.7.0"
djlint = "^1.31.1"
safety = "^2.3.5"
bandit = "^1.7.5"
ipython = "^8.14.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "*migrations*",
    ]

[tool.isort]
profile = "black"
skip = ["docs", "migrations"]
known_django = "django"
known_wagtail = "wagtail"
sections = "FUTURE,STDLIB,DJANGO, WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.djlint]
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
blank_line_before_tag = "load,extends,block"
blank_line_after_tag = "load,extends,endblock"
profile = "django"
max_line_length = 120
max_attribute_length = 120
use_gitignore = true
format_attribute_template_tags = true
format_js = true
format_css = true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "mysite/mysite/asgi.py",
    "mysite/mysite/wsgi.py",
    "mysite/mysite/settings.py",
    "mysite/manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true