[tool.poetry]
name = "blog"
version = "0.1.0"
description = "This is Ventanita's marketing site"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.9"
wagtail-localize = "^1.9"
gunicorn = "^23.0.0"
wagtail = "^6.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
djlint = "^1.31.1"
bandit = "^1.7.5"
ipython = "^8.14.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.1.0"
coverage = "^7.5.1"
black = "^24.4.2"
safety = "^3.2.8"
ruff = "^0.6.9"
sentry-sdk = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "*migrations*",
    ]

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["docs", "migrations"]
known_django = "django"
known_wagtail = "wagtail"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.bandit]
exclude_dirs = ["docs", "path/to/file"]
skips = ["B310", "B311"]

[tool.black]
exclude = '''
/(
  | migrations | docs
)/
'''

[tool.djlint]
blank_line_before_tag = "load,extends,block,include"
blank_line_after_tag = "load,extends,endblock,include"
close_void_tags = true
custom_blocks = "toc,example"
custom_html = "mjml"
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
format_attribute_template_tags = true
format_css = true
format_js = true
# ignore = "H006"
ignore_blocks="raw,example"
indent=2
max_attribute_length = 120
max_line_length = 120
profile = "django"
use_gitignore = true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "mysite/mysite/asgi.py",
    "mysite/mysite/wsgi.py",
    "mysite/mysite/settings.py",
    "mysite/manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true
